router/apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__scopes__tests__extract_scopes.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
expression: doc
---
{
    "internal",
    "profile",
    "read:user",
    "read:username",
    "test",
}
