router/apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__scopes__tests__filter_basic_query-3.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
expression: "TestResult {\n    query: QUERY,\n    extracted_scopes: &extracted_scopes,\n    scopes: [\"profile\".to_string(), \"read:user\".to_string(),\n                    \"internal\".to_string(),\n                    \"test\".to_string()].into_iter().collect(),\n    result: doc,\n    paths,\n}"
---
query:

        {
            topProducts {
                type
                internal
            }

            me {
                id
                name
            }
        }
        
extracted_scopes: {"internal", "profile", "read:user", "read:username", "test"}
request scopes: ["profile", "read:user", "internal", "test"]
filtered:
query {
  topProducts {
    type
    internal
  }
  me {
    id
  }
}

paths: ["/me/name"]
