router/apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__scopes__tests__filter_basic_query.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
expression: "TestResult {\n    query: QUERY,\n    extracted_scopes: &extracted_scopes,\n    scopes: Vec::new(),\n    result: doc,\n    paths,\n}"
---
query:

        {
            topProducts {
                type
                internal
            }

            me {
                id
                name
            }
        }
        
extracted_scopes: {"internal", "profile", "read:user", "read:username", "test"}
request scopes: []
filtered:
query {
  topProducts {
    type
  }
}

paths: ["/topProducts/internal", "/me"]
