router/apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__scopes__tests__interface_field-2.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
expression: "TestResult {\n    query: QUERY2,\n    extracted_scopes: &extracted_scopes,\n    scopes: Vec::new(),\n    result: doc,\n    paths,\n}"
---
query:

        query {
            test
            itf {
                ... on A {
                    id
                    other
                }
                ... on B {
                    id
                    other
                }
            }
        }
        
extracted_scopes: {"a", "b", "c", "d"}
request scopes: []
filtered:
query {
  test
  itf {
    ... on A {
      other
    }
    ... on B {
      other
    }
  }
}

paths: ["/itf/... on A/id", "/itf/... on B/id"]
