router/apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__scopes__tests__interface_fragment-2.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
expression: "TestResult {\n    query: QUERY,\n    extracted_scopes: &extracted_scopes,\n    scopes: [\"read:user\".to_string()].into_iter().collect(),\n    result: doc,\n    paths,\n}"
---
query:

        query {
            topProducts {
                type
            }
            itf {
                id
                ...F
            }
        }

        fragment F on User {
            id2: id
            name
        }
        
extracted_scopes: {"read:user", "read:username"}
request scopes: ["read:user"]
filtered:
query {
  topProducts {
    type
  }
  itf {
    id
    ...F
  }
}
fragment F on User {
  id2: id
}

paths: ["/name"]
